add Plan and Subscription interfaces and implementation